--- a/erp-backend/requirements.txt
+++ b/erp-backend/requirements.txt
@@ -4,3 +4,5 @@ django-filter==25.2
 python-decouple==3.8
 drf-spectacular==0.29.0
 django-cors-headers>=4.0,<5.0
+djangorestframework-simplejwt>=5.2,<6.0
+
